examples/neg/namer/issue950/ambiguous_interfaces_overload.effekt
interface Greet { def sayHello(): Unit }
interface Welcome { def sayHello(): Unit }

def helloWorld() = try {
  sayHello() 

  } with Greet {
  def sayHello() = { println("Hello from Greet!"); resume(()) }
}

def main() = {
  helloWorld() 
}